--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>418</height>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -87,6 +87,16 @@
     </property>
     <property name="text">
      <string>getsalt8</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>420</y>
+      <width>331</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
