--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>399</width>
+    <width>1000</width>
     <height>462</height>
    </rect>
   </property>
@@ -29,6 +29,12 @@
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0" colspan="2">
      <widget class="QTextEdit" name="textEdit">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="sizeIncrement">
        <size>
         <width>369</width>
@@ -74,7 +80,7 @@
       <item row="0" column="0">
        <widget class="QPushButton" name="pushButton_4">
         <property name="text">
-         <string>getsalt8</string>
+         <string>get_online_users</string>
         </property>
        </widget>
       </item>
